k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workshop-app
  labels:
    name: workshop-app
